<resources>
    <string name="app_name">DFlow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="access_token" translatable="false">
        pk.eyJ1IjoiYXRvcnViYXIiLCJhIjoiY2pub3AxYXM2MXk0MDNxbDd5YmptNXk3ZiJ9.mogGkAsapJ4C5YADGCBuBg
    </string>
    <string name="user_location_permission_not_granted">User location permission not granted</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its
        functionality.
    </string>
    <string name="not_able_to_obtain_device_location">Not able to obtain device location.</string>
    <string name="gps_disabled">GPS is disabled. Turn it on?</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="book">Book</string>
    <string name="tariff_per_minute">per minute</string>
    <string name="tariff_wait_time">wait time:</string>
    <string name="min">min</string>
    <string name="km">km</string>
    <string name="booking_battery">BATTERY</string>
    <string name="booking_remaining_distance">REMAINING\nDISTANCE</string>
    <string name="booking_closest_charger">CLOSEST\nCHARGER</string>
    <string name="booking_confirm">Confirm booking</string>
    <string name="booking_terms_and_conditions">Terms and conditions</string>
    <string name="booking_tariff_details">Tariff details</string>
    <string name="bookTransitionName">bookTransitionName</string>
</resources>