<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="vehicle"
                type="com.tlabscloud.r2b.dflow.model.Vehicle"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="@dimen/card_image_height"
                android:layout_marginBottom="100dp"
                android:id="@+id/materialCardView">
            <LinearLayout android:orientation="vertical"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          tools:context="com.tlabscloud.r2b.dflow.screens.bookVehicle.VehicleBookingFragment">
                <ImageView
                        app:imageFromUrl="@{vehicle.imageUrl}"
                        android:transitionName="@string/bookTransitionName"
                        android:id="@+id/book_vehicle_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/card_image_height"
                        android:scaleType="centerCrop"
                        android:contentDescription="@{@string/map_location_image(vehicle.name)}"/>

                <LinearLayout
                        android:id="@+id/book_vehicle_content"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="310dp">
                    <TextView
                            android:id="@+id/vehicle_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_small"
                            android:text="@{vehicle.name}"
                            tools:text="SAMPLE Name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                    <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:stretchColumns="*">

                        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawableStart="@drawable/battery_charging_full"
                                    android:text="@{vehicle.chargeLevelFormatted}"
                                    android:gravity="center"
                                    android:layout_gravity="center"
                                    tools:text="45%"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{vehicle.electricRange+` `+@string/km}"
                                    android:layout_gravity="center"
                                    tools:text="400 km"/>
                            <LinearLayout android:orientation="horizontal"
                                          android:layout_width="wrap_content"
                                          android:layout_gravity="center"
                                          android:layout_height="wrap_content">
                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@{vehicle.chargeLevelFormatted}"
                                        android:drawableStart="@drawable/directions_black"
                                        android:gravity="center"
                                        android:layout_gravity="center"
                                        tools:text="12.5 km"/>
                            </LinearLayout>
                        </TableRow>
                        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:singleLine="false"
                                    android:gravity="center_horizontal"
                                    android:layout_gravity="center_horizontal"
                                    android:scrollHorizontally="false"
                                    android:text="@string/booking_battery"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:singleLine="false"
                                    android:gravity="center_horizontal"
                                    android:layout_gravity="center_horizontal"
                                    android:scrollHorizontally="false"
                                    android:text="@string/booking_remaining_distance"/>
                            <!--TODO: display distance to nearest charger-->
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:singleLine="false"
                                    android:gravity="center_horizontal"
                                    android:layout_gravity="center_horizontal"
                                    android:scrollHorizontally="false"
                                    android:text="@string/booking_closest_charger"/>
                        </TableRow>
                    </TableLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <Button
                android:text="@string/book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookButton"
                android:layout_marginEnd="@dimen/margin_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"/>
        <TextView
                app:vehicleTariffText="@{vehicle.tariff}"
                android:layout_marginStart="@dimen/margin_normal"
                android:background="@color/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>